--- a/static/index.html
+++ b/static/index.html
@@ -19,7 +19,7 @@
       <script rel="preload" src="https://cdn.jsdelivr.net/particles.js/2.0.0/"></script>
       <div class="main">
 <h1 class="title">&#73;&#110;&#75;&#89;&#115;&#116;&#101;&#108;&#108;&#97;&#114;</h1>
-        <p id="splash"></p>
+        <p id="splash">Sponsered by AnshOS</p>
         <div class="search-container">
           <form id="fv" method="POST">
             <input
